--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.1.5",
     "react-scripts": "4.0.3",
+    "react-social-login-buttons": "^3.6.0",
+    "reactstrap": "^9.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
